Log redaction does not show query shape when slow queries are logged

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.4.0-rc1
    • Affects Version/s: None
    • Component/s: Security
    • None
    • Fully Compatible
    • ALL
    • Platforms 2016-10-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Log redaction is supposed to redact out sensitive lines and when possible, show the query shape, redacting only the values but displaying the keys. Currently this is not the case and everything is redacted out every time.

            Assignee:
            Spencer Jackson
            Reporter:
            Osmar Olivo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: