SERVER-26325: Show redacted slow operation report when redaction enabled